# ChangeLog for sys-devel/crossdev
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/ChangeLog,v 1.44 2006/11/29 00:38:46 lu_zero Exp $

  29 Nov 2006; Luca Barbato <lu_zero@gentoo.org> files/crossdev:
  Bumping binutils version required by Cell

  14 Nov 2006; Luca Barbato <lu_zero@gentoo.org> files/crossdev:
  Cell update, not bumping version yet.

*crossdev-0.9.17-r2 (11 Oct 2006)

  11 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> files/crossdev,
  -crossdev-0.9.17-r1.ebuild, +crossdev-0.9.17-r2.ebuild:
  Shoot me, should be 2.16.1-r3 rather than just 2.16.1 for avr

*crossdev-0.9.17-r1 (11 Oct 2006)

  11 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> files/crossdev,
  -crossdev-0.9.17.ebuild, +crossdev-0.9.17-r1.ebuild:
  Bump to fix AVR binutils version

*crossdev-0.9.17 (17 Sep 2006)

  17 Sep 2006; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  -crossdev-0.9.16-r2.ebuild, +crossdev-0.9.17.ebuild:
  Add support for mingw compilers #129598.

*crossdev-0.9.16-r2 (07 Sep 2006)

  07 Sep 2006; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  +crossdev-0.9.16-r2.ebuild:
  Fixup previous cross-compile commit and fix handling of /etc/portage files
  when dealing with subdirs.

*crossdev-0.9.16-r1 (03 Sep 2006)

  03 Sep 2006; Danny van Dyk <kugelfang@gentoo.org> files/crossdev,
  -crossdev-0.9.16.ebuild, +crossdev-0.9.16-r1.ebuild:
  Bumped to use new CROSSCOMPILE_OPTS USE_EXPAND flag.

*crossdev-0.9.16 (21 Aug 2006)

  21 Aug 2006; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  -crossdev-0.9.15-r2.ebuild, +crossdev-0.9.16.ebuild:
  Add support for cell from lu_zero and push out accumulated fixes.

*crossdev-0.9.15-r2 (10 Aug 2006)

  10 Aug 2006; Mike Frysinger <vapier@gentoo.org> files/crossdev,
  -crossdev-0.9.15-r1.ebuild, +crossdev-0.9.15-r2.ebuild:
  Add support for dirs in /etc/portage #143367 by Ryan Neufeld.

  09 May 2006; Diego Pettenò <flameeyes@gentoo.org>