@@ -1,15 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX crossdev 18148 RMD160 67bb4d9b56a1d7c7b6f4c2d13327d802570a25a0 SHA1 3d5cee4bd672d003faa7cce6fd92e9832ec5d61e SHA256 90b8ab77f44e1f0bbd2d842500dc76e5b093d24cc816e307605eb77fafc8ac5c
 MD5 f9ce2dd3c87331fdf43f8d1a80d26905 files/crossdev 18148
 RMD160 67bb4d9b56a1d7c7b6f4c2d13327d802570a25a0 files/crossdev 18148
 SHA256 90b8ab77f44e1f0bbd2d842500dc76e5b093d24cc816e307605eb77fafc8ac5c files/crossdev 18148
-EBUILD crossdev-0.9.17-r2.ebuild 595 RMD160 061f5d75334e7aac79c6895fab52498c7d55cfc6 SHA1 2beda2a242518e57d3d10ef7244306eabdcd7f4e SHA256 f0c560704b2e750735a4e77749fed9e7c4c52c2bbaaea3e28259f98e3de62713
-MD5 e04b71f24a1246372960891d6f91e02d crossdev-0.9.17-r2.ebuild 595
-RMD160 061f5d75334e7aac79c6895fab52498c7d55cfc6 crossdev-0.9.17-r2.ebuild 595
-SHA256 f0c560704b2e750735a4e77749fed9e7c4c52c2bbaaea3e28259f98e3de62713 crossdev-0.9.17-r2.ebuild 595
-MISC ChangeLog 9112 RMD160 0ae1e9e376e72ead62d41bc48d259b61a14a158a SHA1 188b9eb609ffe0754b8a4e63915707dedd748693 SHA256 f942b3306020cd97eaddbad19a57d012887816da0a3dc1e54f05f35de5b0429c
-MD5 fc60b2e02a87367c4727c2066e46f239 ChangeLog 9112
-RMD160 0ae1e9e376e72ead62d41bc48d259b61a14a158a ChangeLog 9112
-SHA256 f942b3306020cd97eaddbad19a57d012887816da0a3dc1e54f05f35de5b0429c ChangeLog 9112
+EBUILD crossdev-0.9.17-r2.ebuild 611 RMD160 2c2e92951b07751782fbec9161f6bbc83d3b012b SHA1 e359890e4117bd9e369e6a6a8eb80cc4fcaa79ee SHA256 e08f3910c23bf2984e3e787624c538544801791fdd48ff01c5b8b8ed5fc66bfe
+MD5 991cea7a3105ae8478a2897d885de009 crossdev-0.9.17-r2.ebuild 611
+RMD160 2c2e92951b07751782fbec9161f6bbc83d3b012b crossdev-0.9.17-r2.ebuild 611
+SHA256 e08f3910c23bf2984e3e787624c538544801791fdd48ff01c5b8b8ed5fc66bfe crossdev-0.9.17-r2.ebuild 611
+MISC ChangeLog 9232 RMD160 5c01168b68e0d3050fcb097929b8d62628ac7771 SHA1 b2588cbf9d772f4f887261d1bf025198485aa6dd SHA256 c20317b73b62c78dc685179112661aac6a770667cf0f56c149fb7d5654b64b68
+MD5 9aa847f63cfe0bb90d84230d39a460e4 ChangeLog 9232
+RMD160 5c01168b68e0d3050fcb097929b8d62628ac7771 ChangeLog 9232
+SHA256 c20317b73b62c78dc685179112661aac6a770667cf0f56c149fb7d5654b64b68 ChangeLog 9232
 MISC metadata.xml 222 RMD160 0be0385efc240909b533447fe4ce586bf39c52f5 SHA1 e965b449efbf26435730e93c78602fb5d8cdce0e SHA256 c11360fafdb92d96d343530a7f5869494a27c5cc1fec703094b1221632b6163f
 MD5 e91cdaf464f515f3528da02cf06e54a1 metadata.xml 222
 RMD160 0be0385efc240909b533447fe4ce586bf39c52f5 metadata.xml 222
@@ -17,3 +20,10 @@ SHA256 c11360fafdb92d96d343530a7f5869494a27c5cc1fec703094b1221632b6163f metadata
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-crossdev-0.9.17-r2 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-crossdev-0.9.17-r2 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-crossdev-0.9.17-r2 0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFcguvamhnQswr0vIRAqO8AJ9RFjxL5Uw3wtbvkb7rEkHeRrozJwCfaI0X
+8Q/mGWT553aPKAqobUh1/yo=
+=UAoR
+-----END PGP SIGNATURE-----
