@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/crossdev-0.9.17-r2.ebuild,v 1.1 2006/10/11 21:46:43 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/crossdev-0.9.17-r2.ebuild,v 1.2 2006/12/02 23:26:32 vapier Exp $
 
 DESCRIPTION="Gentoo Cross-toolchain generator"
 HOMEPAGE="http://www.gentoo.org/"
@@ -12,7 +12,8 @@ KEYWORDS="alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc x86 ~x86-f
 IUSE=""
 
 RDEPEND=">=sys-apps/portage-2.1
-	app-shells/bash"
+	app-shells/bash
+	dev-util/unifdef"
 
 src_install() {
 	dosbin "${FILESDIR}"/crossdev || die
