@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/crossdev
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/ChangeLog,v 1.44 2006/11/29 00:38:46 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/crossdev/ChangeLog,v 1.45 2006/12/02 23:26:32 vapier Exp $
+
+  02 Dec 2006; Mike Frysinger <vapier@gentoo.org> crossdev-0.9.17-r2.ebuild:
+  Force dev-util/unifdef to "fix" #155447.
 
   29 Nov 2006; Luca Barbato <lu_zero@gentoo.org> files/crossdev:
   Bumping binutils version required by Cell
